logs/jirachi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jirachi'...
Listing './lib/python3.5/site-packages/jirachi/core'...
Compiling './lib/python3.5/site-packages/jirachi/core/types.py'...
***   File "./lib/python3.5/site-packages/jirachi/core/types.py", line 19
    Maybe: GenericMeta = type("Maybe", (MaybeType, ), {})
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jirachi/core/wsgi.py'...
***   File "./lib/python3.5/site-packages/jirachi/core/wsgi.py", line 10
    wsgi: BluePrint = BluePrint('/')
        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jirachi/io'...
Listing './lib/python3.5/site-packages/jirachi/io/mongodb'...
Listing './lib/python3.5/site-packages/jirachi/io/postgres'...
Compiling './lib/python3.5/site-packages/jirachi/io/postgres/monitor.py'...
***   File "./lib/python3.5/site-packages/jirachi/io/postgres/monitor.py", line 64
    res = [await actor.conn.execute(s) for s in sqls]
          ^
SyntaxError: 'await' expressions in comprehensions are not supported

Listing './lib/python3.5/site-packages/jirachi/io/remote'...
Listing './lib/python3.5/site-packages/jirachi/io/requests'...
Listing './lib/python3.5/site-packages/jirachi/io/scheduler'...
Listing './lib/python3.5/site-packages/jirachi-0.1.2.14.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pulsar'...
Listing './lib/python3.5/site-packages/pulsar/apps'...
Listing './lib/python3.5/site-packages/pulsar/apps/data'...
Listing './lib/python3.5/site-packages/pulsar/apps/data/pulsards'...
Listing './lib/python3.5/site-packages/pulsar/apps/data/redis'...
Listing './lib/python3.5/site-packages/pulsar/apps/ds'...
Listing './lib/python3.5/site-packages/pulsar/apps/greenio'...
Listing './lib/python3.5/site-packages/pulsar/apps/http'...
Listing './lib/python3.5/site-packages/pulsar/apps/rpc'...
Listing './lib/python3.5/site-packages/pulsar/apps/socket'...
Listing './lib/python3.5/site-packages/pulsar/apps/test'...
Listing './lib/python3.5/site-packages/pulsar/apps/test/plugins'...
Listing './lib/python3.5/site-packages/pulsar/apps/test/plugins/htmlfiles'...
Listing './lib/python3.5/site-packages/pulsar/apps/test/plugins/htmlfiles/profile'...
Listing './lib/python3.5/site-packages/pulsar/apps/ws'...
Listing './lib/python3.5/site-packages/pulsar/apps/wsgi'...
Listing './lib/python3.5/site-packages/pulsar/async'...
Listing './lib/python3.5/site-packages/pulsar/utils'...
Listing './lib/python3.5/site-packages/pulsar/utils/structures'...
Listing './lib/python3.5/site-packages/pulsar/utils/system'...
Listing './lib/python3.5/site-packages/pulsar/utils/tools'...
Listing './lib/python3.5/site-packages/pulsar-1.6.4.dist-info'...
Listing './lib/python3.5/site-packages/pulsar_test'...
Listing './lib/python3.5/site-packages/pwsgi'...
Listing './lib/python3.5/site-packages/pwsgi-0.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/uvloop'...
Listing './lib/python3.5/site-packages/uvloop/handles'...
Listing './lib/python3.5/site-packages/uvloop/includes'...
Listing './lib/python3.5/site-packages/uvloop-0.8.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
